<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/sdkHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_log_hint"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="?attr/colorTextGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checked="false"
        android:text="@string/sdk_autotrack_page"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sdkHint" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/alias"
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="@dimen/material_textinput_default_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/sdk_autotrack_page_alias_hint"
        app:helperText="@string/sdk_autotrack_page_alias_helper"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pageTitle"
        app:placeholderText="AutotrackerPage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aliasEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/aliasBtn"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sdk_autotrack_page_alias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alias" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/aliasBtn" />

    <com.growingio.demo.ui.widgets.AttributesRecyclerView
        android:id="@+id/attributeList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/pageHint"
        app:layout_constraintTop_toBottomOf="@+id/divider" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/controlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/pageHint"
        app:layout_constraintEnd_toStartOf="@+id/attributeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attributeList"
        app:layout_constraintVertical_bias="0.25"
        app:singleSelection="false">

        <Button
            android:id="@+id/addBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/sdk_attributes_add"
            android:textSize="16sp" />

        <Button
            android:id="@+id/subBtn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:text="@string/sdk_attributes_sub"
            android:textSize="16sp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <Button
        android:id="@+id/attributeBtn"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_autotrack_page_attribute"
        app:layout_constraintBottom_toTopOf="@+id/pageHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/controlBtn"
        app:layout_constraintTop_toBottomOf="@+id/attributeList"
        app:layout_constraintVertical_bias="0.25" />


    <TextView
        android:id="@+id/pageHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/sdk_autotrack_page_hint"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="?attr/colorTextGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>