<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/sdkHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_log_hint"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="?attr/colorTextGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timerInput"
        style="?attr/textInputOutlinedDenseStyle"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/sdk_event_timer_custom"
        app:helperText="@string/sdk_event_timer_custom_helper"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sdkHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timerEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sdk_event_timer_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerInput" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <Button
        android:layout_marginStart="16dp"
        android:id="@+id/pauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sdk_event_timer_pause"
        app:layout_constraintEnd_toStartOf="@+id/resumeBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/resumeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_event_timer_resume"
        app:layout_constraintBaseline_toBaselineOf="@+id/pauseBtn"
        app:layout_constraintEnd_toStartOf="@+id/endBtn"
        app:layout_constraintStart_toEndOf="@+id/pauseBtn" />

    <Button
        android:layout_marginEnd="16dp"
        android:id="@+id/endBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_event_timer_end"
        app:layout_constraintBaseline_toBaselineOf="@+id/pauseBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resumeBtn" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sdk_event_timer_delete"
        app:layout_constraintEnd_toStartOf="@+id/clean"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pauseBtn" />

    <Button
        android:id="@+id/clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_event_timer_clean"
        app:layout_constraintBaseline_toBaselineOf="@+id/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sdk_event_timer_default"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clean" />


</androidx.constraintlayout.widget.ConstraintLayout>